# live-flight

./: .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: tests.yml
definitions/: specs.md
live_flight/: api.py  location.py  main.py  opensky.py  photos.py
live_flight/static/: app.js  index.html  styles.css
tests/: test_api.py  test_location.py  test_main.py  test_opensky.py  test_photos.py
